--- a/VotersManual.resx
+++ b/VotersManual.resx
@@ -119,17 +119,13 @@
   </resheader>
   <data name="LblViewElectionDesc.Text" xml:space="preserve">
     <value>Once logged n, you will be directed to the student home page.
-
 - You may browse the View Election control to view the lists of candidates, positions, and partylists.
-
 - Each candidate will be listed together with their student's profile and qualifications.
 </value>
   </data>
   <data name="LblCastVoteDesc.Text" xml:space="preserve">
-    <value>After reviewing the candidates, select your preferred candidate(s) for each position.
-
-You can select only one candidate for each positon except Peace Officer election.
-
-Once you make your selectons, double-check them to ensure they are accurate. </value>
+    <value>- After reviewing the candidates, select your preferred candidate(s) for each position.
+- You can select only one candidate for each positon except Peace Officer election.
+- Once you make your selectons, double-check them to ensure they are accurate. </value>
   </data>
 </root>
